# rust-based-prefect

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  README.md  RELEASING.md  environment.yml  mkdocs.yml  pytest.ini  requirements-ci.txt
benchmarks/: __init__.py  _profile_ironflow_hot.py  compare_prefect_vs_ironflow.py  perf_matrix.py  prefect_wide_runner_ab.py
docs/: DISTRIBUTION.md  INSTALL.md  MEMORY_BANK.md  PERFORMANCE_OVERVIEW.md  PREFECT_IRONFLOW_MAPPING.md  QUICKSTART_DEMO.md  SELF_HOSTED_SERVER.md  architecture.md  benchmark_baseline.md  compatibility.md  index.md  perf_baseline_example.json  perf_baseline_pre_next_step.json  perf_baseline_pre_next_step.md  perf_candidate_after_revert_fastpath.json  perf_candidate_after_revert_fastpath.md  perf_candidate_example.json  perf_candidate_post_batch.json  perf_candidate_post_batch.md  perf_candidate_post_batch_tuned.json  perf_candidate_post_batch_tuned.md  perf_candidate_post_boundconn_threshold.json  perf_candidate_post_boundconn_threshold.md  perf_candidate_post_createflow_fastpath.json  perf_candidate_post_createflow_fastpath.md  perf_candidate_post_flow_batch_tx.json  perf_candidate_post_flow_batch_tx.md  perf_compare_after_revert_fastpath.json  perf_compare_after_revert_fastpath.md  perf_compare_example.json  perf_compare_example.md  perf_compare_post_batch.json  perf_compare_post_batch.md  (+17 more)
python-shim/: pyproject.toml
python-shim/examples/: flow_ironflow.py  flow_prefect.py
python-shim/src/prefect_compat/: __init__.py  decorators.py  hooks.py  mp_picklable.py  runtime.py  rust_bridge.py  server.py  task_runners.py
python-shim/tests/: conftest.py  test_compat.py  test_deployments_api.py  test_deployments_runtime.py  test_e2e_flow_scripts.py  test_persistence.py  test_race_and_load.py  test_rust_fsm.py  test_task_runners.py  test_transition_hooks.py  test_ui_api.py
rust-engine/: Cargo.toml
rust-engine/src/: deployment_ops.rs  engine.rs  ffi.rs  lib.rs  ui_read.rs  ui_write.rs
rust-engine/tests/: engine_integration.rs
static-planner/: pyproject.toml
static-planner/src/static_planner/: __init__.py  forecast.py  ir.py  planner.py
static-planner/tests/: test_planner.py
(+39 files in other folders)
