[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ironflow-prefect-compat"
version = "0.1.1"
description = "Prefect-style compatibility shim for Project IronFlow."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
