[package]
name = "ironflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=1.0.69"
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }

[dev-dependencies]
once_cell = "1"
