[package]
name = "ironflow-engine"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=1.0.69"
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
cron = "=0.15.0"

[dev-dependencies]
once_cell = "1"
